[package]
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>", "Timofei Kazantsev aka Levitanus <pianoist@ya.ru>"]
description = "Library for testing reaper extensions within real REAPER instance."
edition = "2021"
name = "reaper-test"
readme = "README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
reaper-low = "0.1.0"
reaper-macros = "0.1.0"
reaper-medium = "0.1.0"

fs_extra = "1.2.0"
reqwest = {version = "0.10", features = ["blocking"]}
tar = "0.4.26"
wait-timeout = "0.1.5"
xz2 = "0.1"

[patch.crates-io]
reaper-low = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
reaper-macros = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
reaper-medium = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
